fix: modify jenkins doc